# atimucms

./: .$eprcrm.drawio.bkp  .$eprcrm.drawio.dtmp  README.md  db.erd  eprcrm.drawio  rustcrm-2024-01-17T13_56_07.sql  rustcrm-2024-01-17T13_59_55.sql  rustcrm-2024-01-17T14_06_23.sql  rustcrm-2024-01-17T15_01_53.sql  rustcrm-2024-01-18T09_39_34.sql
backend/: Cargo.toml
backend/src/: main.rs  router.rs
backend/src/account/: apis.rs  db.rs  models.rs
backend/src/empoyee/: apis.rs
backend/src/meetings/: apis.rs  db.rs  models.rs
backend/src/payments/: apis.rs  db.rs  mod.rs  models.rs
backend/src/refresh/: apis.rs  db.rs  mod.rs
backend/src/tasks/: apis.rs  db.rs  models.rs
backend/src/users/: apis.rs  db.rs  function.rs  mod.rs  models.rs
frontend/: pubspec.yaml
frontend/assets/data/: users.json
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  redi.dart  router.dart  shell.dart
frontend/lib/data/: api.dart  data.dart  db.dart  sharedata.dart  testdata.dart
frontend/lib/db/: account.dart  db.dart
frontend/lib/providers/: accountprovider.dart  changenotify.dart  leadprovider.dart  meetprovider.dart  models.dart  providers.dart  settprovider.dart  teamsprovider.dart  transaction.dart  userprovider.dart
frontend/lib/screens/: screens.dart  settingspage.dart  splashscreen.dart
frontend/lib/screens/accounts/: transaction.dart
frontend/lib/screens/auth/: auth.dart  changepassword.dart  loginpage.dart
frontend/lib/screens/documents/: documents.dart  homedoc.dart
frontend/lib/screens/homepage/: home.dart  homecard.dart  homenavi.dart  homepage.dart  modules.dart  settingspage.dart
frontend/lib/screens/hr/: department.dart  hr.dart  (+1 more)
frontend/lib/util/: formula.dart  notify.dart  util.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
(+14 files in other folders)
